<resources>
    <string name="app_name">app</string>
    <string name="msg">Hi, This is the Detail !</string>
    <string name="detail_name">이름</string>
    <string name="detail_call">전화번호</string>
    <string name="detail_capacity">수용인원</string>
    <string name="detail_address">주소</string>
    <string name="detail_remarks">비고</string>
    <string name="detail_user">작성자</string>
    <string name="detail_date">수정날짜</string>
    <string name="main_app_name">대피소 목록</string>
    <string name="edit_app_name">수정</string>
    <string name="app">Shelter</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="favorit_on_toast">즐겨찾기목록에 추가하였습니다.</string>
    <string name="favorit_off_toast">즐겨찾기목록에서 삭제하였습니다.</string>
    <string name="favorit_fail_toast">즐겨찾기 설정에 실패했습니다.</string>
    <string name="data_not_find">데이터를 불러오는데 실패했습니다.</string>
    <string name="request_login">로그인이 필요한 서비스 입니다.</string>
    <string name="delete_success">삭제하였습니다.</string>
    <string name="delete_failed">삭제에 실패했습니다.</string>
    <string name="logout_msg">로그아웃 하였습니다.</string>
    <string name="save_success">저장 성공!</string>
    <string name="save_failed">저장 실패!</string>
    <string name="save_exist">이미 있는 장소입니다!</string>
    <string name="login_success">님 환영합니다!</string>
    <string name="login_failed">아이디와 비밀번호를 확인해주세요.</string>
    <string name="signup_success">회원가입이 완료되었습니다.</string>
    <string name="signup_failed">이미 존재하는 아이디 입니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
