<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical">
    <!--지도담을 공간-->
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/edit_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stretchColumns="1">

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:text="@string/detail_name"
                            android:textStyle="bold"
                            android:gravity="center"/>
                        <EditText
                            android:id="@+id/edit_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:layout_weight="1"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:text="@string/detail_call"
                            android:textStyle="bold"
                            android:gravity="center"/>
                        <EditText
                            android:id="@+id/edit_call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:layout_weight="1"
                            android:inputType="phone"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:text="@string/detail_capacity"
                            android:textStyle="bold"
                            android:gravity="center"/>
                        <EditText
                            android:id="@+id/edit_capacity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:inputType="number"
                            android:layout_weight="1"/>
                    </TableRow>


                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_address"
                            android:padding="@dimen/detail_text_padding"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <EditText
                            android:id="@+id/edit_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/detail_text_padding"
                            android:layout_weight="1"/>
                    </TableRow>
                    <TableRow>
                        <TextView/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="주소검색"
                            android:id="@+id/search_button"/>
                    </TableRow>
                </TableLayout>

                <ImageButton
                    android:layout_width="@dimen/detail_image_size"
                    android:layout_height="@dimen/detail_image_size"
                    android:layout_alignParentRight="true"
                    android:background="@android:drawable/ic_input_add"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/edit_image"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:text="@string/detail_remarks"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_text_padding"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>